# llampudken_data_analysis

./: LICENSE  OSC_CALIBRATIONS.py  README.md  data_analisis_llamp_shot662.m  main.py  osc_data_reader.py  pyproject.toml
.osc_env/: pyvenv.cfg
osc_data/: shot1558_20240410_dpo4104.txt  shot1558_20240410_dpo5054.txt  shot1558_20240410_tds3054.txt  shot1558_20240410_tds5054.txt  shot1558_20240410_tds684b.txt  shot1558_20240410_tds7104.txt  shot1559_20240410_dpo4104.txt  shot1559_20240410_dpo5054.txt  shot1559_20240410_tds3054.txt  shot1559_20240410_tds5054.txt  shot1559_20240410_tds684b.txt  shot1559_20240410_tds7104.txt  shot1560_20240410_dpo4104.txt  shot1560_20240410_dpo5054.txt  shot1560_20240410_tds3054.txt  shot1560_20240410_tds5054.txt  shot1560_20240410_tds684b.txt  shot1560_20240410_tds7104.txt  shot1593_20240510_Ipr.txt  shot1593_20240510_dpo4104.txt  shot1593_20240510_dpo5054.txt  shot1593_20240510_tds3054.txt  shot1593_20240510_tds5054.txt  shot1593_20240510_tds684b.txt  shot1593_20240510_tds7104.txt  shot1594_20240510_Ipr.txt  shot1594_20240510_dpo4104.txt  shot1594_20240510_dpo5054.txt  shot1594_20240510_tds3054.txt  shot1594_20240510_tds5054.txt  shot1594_20240510_tds684b.txt  shot1594_20240510_tds7104.txt  shot1595_20240510_Ipr.txt  shot1595_20240510_dpo4104.txt  shot1595_20240510_dpo5054.txt  shot1595_20240510_tds3054.txt  shot1595_20240510_tds5054.txt  shot1595_20240510_tds684b.txt  shot1595_20240510_tds7104.txt  shot1596_20240510_Ipr.txt  (+13 more)
scripts/: compare_shots_template.py  compare_with_matlab.py  run_pipeline.py
tests/: test_gui_indexing.py  (+3 more)
(+46 files in other folders)
