[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osc-analysis"
version = "0.1.0"
description = "OOP scaffold for MATLAB-to-Python oscilloscope analysis translation"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "plotly",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
